2020-09-27  Marc A. Smith  <marc.smith@quantum.com>

	enabled NVMeoF for MOFED; recomposed -debug.patch for kernel config

2020-09-25  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'rc_network'

	rework of the 'rc.network' script (lots of formatting fixes, properly remove defautl GW's, added the "apply" action) -- needs testing

2020-09-17  Marc A. Smith  <marc.smith@quantum.com>

	enabled CONFIG_ACPI_APEI_* support and related/dep options

	enabled CONFIG_USB_RTL8152

2020-08-28  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'bnxt_vf_fix'

	apply Linux patch "bnxt_en: fix HWRM error when querying VF temperature" to silence messages with bnxt_en when used with VF's

2020-08-19  Marc A. Smith  <marc.smith@quantum.com>

	re-add use of ocf_exit_reason in a couple spots (ocf:esos:alua)

	ocf:esos:alua: in alua_stop() set $dev_grp_path, in alua_monitor() always call bio_dev_to_redirect if Slave, but only set local TPG to Slave if not already that value

2020-08-18  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'ra_master_fix'

	ocf:esos:alua: add liberal use of ocf_exit_reason statements back into previously merged changes

	ocf:esos:alua: fixed ordering of opening/closing SCST backing block devices and ALUA states (when using redirect_mode + use_trans_state settings) to prevent I/O errors during cluster state transitions

2020-08-09  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'sbd_update'

	updated SBD to version 1.4.1

2020-07-29  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'man_dir_fix'

	fixed man page install location for fio.chroot and tcl.chroot

	Merge branch 'master' of github.com:quantum/esos

	Merge branch '0729_updates'

	updated SCST to version 3.4.x/r9087; updated fio.chroot recipe to use the configure script and set the '--disable-native' build option (resolves GH issue #259)

2020-07-28  Marc A. Smith  <marc.smith@quantum.com>

	Merge pull request #260 from Brain2000/master
	Fix snmpd not starting
