@@ -1412,17 +1412,17 @@ CONFIG_BLK_DEV_RBD=y
 #
 # NVME Support
 #
-CONFIG_NVME_CORE=y
-CONFIG_BLK_DEV_NVME=y
+CONFIG_NVME_CORE=m
+CONFIG_BLK_DEV_NVME=m
 # CONFIG_NVME_MULTIPATH is not set
-CONFIG_NVME_FABRICS=y
+CONFIG_NVME_FABRICS=m
 CONFIG_NVME_RDMA=m
-CONFIG_NVME_FC=y
+CONFIG_NVME_FC=m
 # CONFIG_NVME_TCP is not set
-CONFIG_NVME_TARGET=y
-CONFIG_NVME_TARGET_LOOP=y
+CONFIG_NVME_TARGET=m
+CONFIG_NVME_TARGET_LOOP=m
 CONFIG_NVME_TARGET_RDMA=m
-CONFIG_NVME_TARGET_FC=y
+CONFIG_NVME_TARGET_FC=m
 # CONFIG_NVME_TARGET_FCLOOP is not set
 # CONFIG_NVME_TARGET_TCP is not set
 # end of NVME Support
